# pocket-teleop

./: .dockerignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml
docs/superpowers/plans/: 2026-03-27-server-implementation.md  2026-03-28-client-implementation.md  2026-03-28-frontend-ui-implementation.md  2026-03-28-practical-gaps-implementation.md  2026-03-29-touch-joystick-implementation.md
docs/superpowers/specs/: 2026-03-27-server-design.md  2026-03-28-client-design.md  2026-03-28-frontend-ui-design.md  2026-03-28-practical-gaps-design.md  2026-03-28-touch-joystick-design.md
memory/agent-guides/: data-schema.md  project-skills.md  repository-structure.md  techstack.md  version-control.md
server/: CMakeLists.txt  package.xml
server/include/: command_handler.hpp  teleop_node.hpp  teleop_server.hpp
server/launch/: teleop.launch.py
server/src/: command_handler.cpp  main.cpp  teleop_node.cpp  teleop_server.cpp
server/test/: test_teleop_node.cpp  test_teleop_server.cpp
web-client/: Dockerfile.webclient  index.html  package-lock.json  package.json  tsconfig.json  vitest.config.ts
web-client/src/: connection.ts  gamepad_handler.ts  gamepad_profiles.ts  protocol.ts  settings.ts  teleop_client.ts  touch_joystick.ts
web-client/test/: gamepad_profiles.test.ts  integration.test.ts  protocol.test.ts  settings.test.ts  touch_joystick.test.ts
