<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pocket_teleop</name>
  <version>0.1.0</version>
  <description>Mobile-first robot teleoperation over WebSocket</description>
  <maintainer email="yiichengg@gmail.com">chngyicheng</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>

  <build_depend>libwebsocketpp-dev</build_depend>
  <build_depend>libboost-system-dev</build_depend>
  <build_depend>nlohmann-json3-dev</build_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
